macros/tests/trybuild/fn.rs
use serde_args_macros::generate;

#[generate]
fn foo() {}

fn main() {}
